# cs2-universal-offsets

./: .gitignore  Cargo.toml  README.md  TASKS.md
.github/workflows/: build.yml
docs/: LAYOUT.md  README.md  SOURCE2_VFX_VCS_INTEL.md  VTABLES.md
dumps/21-04-26-CS2-SDK/: manifest.json
dumps/21-04-26-CS2-SDK/offsets/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.rs  animationsystem_dll.zig  buttons.cs  buttons.hpp  buttons.rs  buttons.zig  client_dll.cs  client_dll.hpp  client_dll.json  client_dll.rs  client_dll.zig  cs2sdk.rs  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  engine2_dll.zig  host_dll.cs  host_dll.hpp  host_dll.rs  host_dll.zig  info.json  interfaces.cs  interfaces.hpp  interfaces.rs  interfaces.zig  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  materialsystem2_dll.zig  netvars.hpp  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  networksystem_dll.zig  offsets.cs  offsets.hpp  offsets.rs  offsets.zig  (+60 more)
dumps/22-04-26-CS2-SDK/: manifest.json
dumps/24-04-26-CS2-SDK/: manifest.json
dumps/25-04-26-CS2-SDK/: manifest.json
dumps/27-04-26-CS2-SDK/: manifest.json
dumps/latest/: manifest.json
src/: main.rs  ui.rs
src/analysis/: advanced_signatures.rs  mod.rs  offsets.rs  rtti.rs  signature_research.rs  signature_verification.rs  skinchanger.rs  vtables.rs
src/output/: amalgamation.rs  ident.rs  interfaces_sdk.rs  mod.rs  netvars.rs  sdk_classes.rs  skinchanger.rs  verified.rs  vtables.rs
src/signatures/: cache.rs  database.rs  diff.rs  mod.rs  writers.rs
(+636 files in other folders)
